fixed overflow bug, sign up redirect bug, and delete user bug

--- a/assets/css/SocialFoot.css
+++ b/assets/css/SocialFoot.css
@@ -272,6 +272,7 @@ h2.bg-secondary {
   padding: 5px;
   padding-left:20px;
   padding-right:20px;
+  word-wrap:break-word;
 }
 .fixed-bottom {
   position: fixed;
